// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/EmailForm render() should not show inline notice when content is not passed in 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="tooltip-target"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          Object {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        onSuggestedCollaboratorAdd={[Function]}
        selectedContacts={Array []}
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should not show inline notice when form is not expanded 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="tooltip-target"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          Object {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        onSuggestedCollaboratorAdd={[Function]}
        selectedContacts={Array []}
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should render default component when avatars are passed in 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <CollaboratorAvatars
    containerAttributes={Object {}}
    maxAdditionalCollaboratorsNum={99}
    maxDisplayedUserAvatars={3}
  />
  <div
    className="tooltip-target"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          Object {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        onSuggestedCollaboratorAdd={[Function]}
        selectedContacts={Array []}
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should render default component when contacts field is disabled 1`] = `
<form
  className="is-expanded"
  onSubmit={[Function]}
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    position="bottom-center"
    text="You do not have permission to invite collaborators."
    theme="default"
  >
    <div
      className="tooltip-target"
    >
      <Tooltip
        constrainToScrollParent={false}
        constrainToWindow={true}
        isShown={true}
        position="middle-right"
        showCloseButton={true}
        text={
          <FormattedMessage
            defaultMessage="Share this item with coworkers by entering their email addresses"
            id="boxui.unifiedShare.enterEmailAddressesCalloutText"
          />
        }
        theme="callout"
      >
        <ContactsField
          disabled={true}
          error=""
          fieldRef={
            Object {
              "current": null,
            }
          }
          getContacts={[MockFunction]}
          onContactAdd={[Function]}
          onContactRemove={[Function]}
          onInput={[Function]}
          onSuggestedCollaboratorAdd={[Function]}
          selectedContacts={Array []}
          validateForError={[Function]}
          validator={[Function]}
        />
      </Tooltip>
    </div>
  </Tooltip>
  <TextArea
    label={
      <FormattedMessage
        defaultMessage="Message"
        id="boxui.unifiedShare.message"
      />
    }
    onChange={[Function]}
    rows={3}
    value=""
  />
  <ModalActions>
    <Button
      isDisabled={false}
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="boxui.core.cancel"
      />
    </Button>
    <PrimaryButton
      isDisabled={true}
      isLoading={false}
      type="submit"
    >
      <FormattedMessage
        defaultMessage="Send"
        id="boxui.core.send"
      />
    </PrimaryButton>
  </ModalActions>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should render default component when expanded 1`] = `
<form
  className="is-expanded"
  onSubmit={[Function]}
>
  <div
    className="tooltip-target"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          Object {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        onSuggestedCollaboratorAdd={[Function]}
        selectedContacts={Array []}
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
  <TextArea
    label={
      <FormattedMessage
        defaultMessage="Message"
        id="boxui.unifiedShare.message"
      />
    }
    onChange={[Function]}
    rows={3}
    value=""
  />
  <ModalActions>
    <Button
      isDisabled={false}
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="boxui.core.cancel"
      />
    </Button>
    <PrimaryButton
      isDisabled={true}
      isLoading={false}
      type="submit"
    >
      <FormattedMessage
        defaultMessage="Send"
        id="boxui.core.send"
      />
    </PrimaryButton>
  </ModalActions>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should render default component when not expanded 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="tooltip-target"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          Object {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        onSuggestedCollaboratorAdd={[Function]}
        selectedContacts={Array []}
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should render default component when there is an error 1`] = `
<form
  className="is-expanded"
  onSubmit={[Function]}
>
  <InlineNotice
    type="error"
  >
    Error submitting form
  </InlineNotice>
  <div
    className="tooltip-target"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          Object {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        onSuggestedCollaboratorAdd={[Function]}
        selectedContacts={Array []}
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
  <TextArea
    label={
      <FormattedMessage
        defaultMessage="Message"
        id="boxui.unifiedShare.message"
      />
    }
    onChange={[Function]}
    rows={3}
    value=""
  />
  <ModalActions>
    <Button
      isDisabled={false}
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="boxui.core.cancel"
      />
    </Button>
    <PrimaryButton
      isDisabled={true}
      isLoading={false}
      type="submit"
    >
      <FormattedMessage
        defaultMessage="Send"
        id="boxui.core.send"
      />
    </PrimaryButton>
  </ModalActions>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should render default component with inline notice 1`] = `
<form
  className="is-expanded"
  onSubmit={[Function]}
>
  <InlineNotice
    type="error"
  >
    Oops, there was an error.
  </InlineNotice>
  <div
    className="tooltip-target"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          Object {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        onSuggestedCollaboratorAdd={[Function]}
        selectedContacts={Array []}
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
  <TextArea
    label={
      <FormattedMessage
        defaultMessage="Message"
        id="boxui.unifiedShare.message"
      />
    }
    onChange={[Function]}
    rows={3}
    value=""
  />
  <ModalActions>
    <Button
      isDisabled={false}
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="boxui.core.cancel"
      />
    </Button>
    <PrimaryButton
      isDisabled={true}
      isLoading={false}
      type="submit"
    >
      <FormattedMessage
        defaultMessage="Send"
        id="boxui.core.send"
      />
    </PrimaryButton>
  </ModalActions>
</form>
`;
